refactor swagger/cors
