# src/routers/auth.js
@@ -1,11 +1,12 @@
 import express from 'express';
 import authController from '../app/controllers/authController.js';
+import { authenticateToken } from '../middlewares/authenticateToken.js';
 
 const router = express.Router();
 
 router.post('/login', authController.login);
 router.post('/register', authController.register);
 router.post('/refreshToken', authController.requestRefreshToken);
-router.delete('/logout', authController.logOut);
+router.post('/logout', authenticateToken, authController.logOut);
 
 export default router;
